--- a/Test/prediction.in
+++ b/Test/prediction.in
@@ -3,13 +3,13 @@
     teamB = Team('Cavaliers', 'Cleveland', 5, 127511146, 6, 1, 4, 3)
     checkWinner(teamA, teamB) # Predict Winner -> Cleveland
 
-    teamA = Team('Celtics', 'Boston', 4, 93465328, , 0, , 7)
-    teamB = Team('Wizards', 'Washington', 9, 101312813, , 1, , 17)
-    checkWinner(teamA, teamB) # Predict Winner ->
+    teamA = Team('Celtics', 'Boston', 4, 93465328, 8, 0, 4, 7)
+    teamB = Team('Wizards', 'Washington', 9, 101312813, 5, 1, 1, 17)
+    checkWinner(teamA, teamB) # Predict Winner -> Boston
 
-    teamA = Team('Warriors', 'Golden State', 1, 101725630, , 1, , 1)
-    teamB = Team('Jazz', 'Utah', 5, 80498193, , 0, , 19)
-    checkWinner(teamA, teamB) # Predict Winner ->
+    teamA = Team('Warriors', 'Golden State', 1, 101725630, 9, 1, 4, 1)
+    teamB = Team('Jazz', 'Utah', 5, 80498193, 6, 0, 1, 19)
+    checkWinner(teamA, teamB) # Predict Winner -> Golden State
 
     teamA = Team('Spurs', 'San Antonio', 2, 108574574, 4, 1, 3, 2)
     teamB = Team('Rockets', 'Houston', 3, 90738581, 7, 0, 2, 17)
