--- a/Test/test2.in
+++ b/Test/test2.in
@@ -1,16 +1,19 @@
-  print('\nTest 2\n')
-  teamA = Team('Raptors', 'Toronto', 5, 108699969, 8, 0, 1, 4)
-  teamB = Team('Cavaliers', 'Cleveland', 5, 127511146, 6, 1, 4, 3)
-  checkWinner(teamA, teamB) # Success Winner -> CLE
+@team A
+Raptors, Toronto, 5, 108699969, 8, 0, 1, 4
+@team B
+Cavaliers, Cleveland, 5, 127511146, 6, 1, 4, 3
 
-  teamA = Team('Celtics', 'Boston', 4, 93465328, 8, 1, 3, 7)
-  teamB = Team('Wizards', 'Washington', 9, 101312813, 6, 0, 2, 17)
-  checkWinner(teamA, teamB) # Success Winner -> Boston
+@team A
+Celtics, Boston, 4, 93465328, 8, 1, 3, 7
+@team B
+Wizards, Washington, 9, 101312813, 6, 0, 2, 17
 
-  teamA = Team('Warriors', 'Golden State', 1, 101725630, 9, 1, 4, 1)
-  teamB = Team('Jazz', 'Utah', 5, 80498193, 6, 0, 1, 19)
-  checkWinner(teamA, teamB) # Success Winner -> Warriors
+@team A
+Warriors, Golden State, 1, 101725630, 9, 1, 4, 1
+@team B
+Jazz, Utah, 5, 80498193, 6, 0, 1, 19
 
-  teamA = Team('Spurs', 'San Antonio', 2, 108574574, 5, 1, 4, 2)
-  teamB = Team('Rockets', 'Houston', 3, 90738581, 7, 0, 1, 17)
-  checkWinner(teamA, teamB) # Fail Winner -> Rockets
+@team A
+Spurs, San Antonio, 2, 108574574, 5, 1, 4, 2
+@team B
+Rockets, Houston, 3, 90738581, 7, 0, 1, 17
